# web-graph

./: README.md  action_graph.py  exceptions.py  main.py  prebuilt.py  pyproject.toml  web_graph.py  web_graph_exceptions.py
elements/: element.py  elements_exceptions.py
src/web_graph/actions/: navigation.py
src/web_graph/elements/: __init__.py  element.py
src/web_graph/elements/forms_and_user_input/: __init__.py  button.py  input.py
src/web_graph/graph/: __init__.py  web_graph.py
src/web_graph/graph/nodes/: __init__.py  action_node.py
tests/: graph_execution_test.py  test_element.py  test_web_graph_action_nodes.py  test_web_graph_basic_execution.py  test_web_graph_condition.py  test_web_graph_execution.py  test_web_graph_max_retries_exception.py  test_web_graph_node_variable_arguments.py  test_web_graph_steps.py
tests/test_elements/: test_element.py
tests/test_graph/: test_web_graph_action_nodes.py  test_web_graph_condition.py  test_web_graph_max_retries_exception.py  test_web_graph_node_variable_arguments.py  test_web_graph_steps.py
