[project]
name = "web-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.5",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "selenium>=4.34.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]
